# aoc

./: .gitignore  pyproject.toml  requirements.txt  ruff.toml
2023/day1/: puzzle_1.py  puzzle_2.py
2023/day10/: puzzle1.py  puzzle2.py
2023/day11/: puzzle1.py  puzzle2.py
2023/day13/: puzzle1.py  puzzle2.py
2023/day14/: puzzle2_brute.py  puzzle2_not_working.py
2023/day15/: puzzle2.py
2023/day16/: puzzle1.py  puzzle2.py
2023/day17/: puzzle1.py  puzzle2.py
2023/day18/: puzzle1.py  puzzle2-with-1-input.py  puzzle2.py
2023/day19/: puzzle1.py  puzzle2.py
2023/day2/: puzzle_1.py
2023/day20/: puzzle1.py  puzzle2.py
2023/day3/: puzzle_1.py
2023/day4/: puzzle_1.py  puzzle_2.py
2023/day7/puzzle1/: puzzle_1.py
2023/day7/puzzle2/: puzzle_2.py
2023/day8/puzzle2/: puzzle2_brute.py
2023/day9/: puzzle1.py  puzzle2.py
2024/d1p1/: solution.py
2024/d1p2/: solution.py
2024/d2p1/: solution.py
2024/d2p2/: solution.py
2024/d3p1/: solution.py
2024/d3p2/: solution.py
2024/d4p1/: solution.py
2024/d4p2/: solution.py
2024/d5p1/: solution.py
aoc/2023/day10/: puzzle1.py
aoc/2023/day12/: puzzle.py
aoc/day1/: puzzle_2.py
aoc/day10/: puzzle2.py
aoc/day11/: puzzle2.py
aoc/day13/: puzzle1.py  puzzle2.py
aoc/day14/: puzzle1.py
aoc/day16/: puzzle1.py
aoc/day17/: puzzle1.py  puzzle2.py
aoc/day18/: puzzle1.py  puzzle2-with-1-input.py  puzzle2.py
aoc/day19/: puzzle1.py  puzzle2.py
aoc/day2/: puzzle_1.py
aoc/day3/: puzzle_1.py
aoc/day4/: puzzle_2.py
src/aoc_helper/: __init__.py  main.py
src/aoc_utils/: __init__.py
(+13 files in other folders)
